[gd_scene load_steps=7 format=3 uid="uid://d1htmk466vnuj"]

[ext_resource type="Script" path="res://NavigationAgentCharacterBody3DController.gd" id="1_g3rio"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xey6x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v2nr8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7wi24"]
albedo_color = Color(0, 0.407843, 1, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.4
emission_energy_multiplier = 16.0
clearcoat_enabled = true
clearcoat_roughness = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s36km"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dlggd"]
albedo_color = Color(0, 0, 0, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.4
emission_energy_multiplier = 16.0
clearcoat_enabled = true
clearcoat_roughness = 1.0

[node name="NavigationAgentCharacterBody3D" type="CharacterBody3D"]
floor_max_angle = 1.48353
script = ExtResource("1_g3rio")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 2.0
debug_enabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xey6x")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_v2nr8")
surface_material_override/0 = SubResource("StandardMaterial3D_7wi24")

[node name="FaceMesh" type="MeshInstance3D" parent="BodyMesh"]
transform = Transform3D(1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0.3, -0.0960928)
mesh = SubResource("CapsuleMesh_s36km")
surface_material_override/0 = SubResource("StandardMaterial3D_dlggd")

[node name="YawOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="PitchOrigin" type="Node3D" parent="YawOrigin"]

[node name="SpringArm3D" type="SpringArm3D" parent="YawOrigin/PitchOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="YawOrigin/PitchOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 4)
fov = 40.0
